--- a/VerifyDemo/app/src/main/res/layout/activity_main.xml
+++ b/VerifyDemo/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.aron.xiao.app.verifydemo.MainActivity">
 
-    <TextView
+    <Button
+        android:id="@+id/btn_2_touch_dispatch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="跳转消息派发模块"/>
+
 </RelativeLayout>
